started isolating some concepts/features: user accounts, transactions created repositories AppMenu is exclusive to ui, we'll find place for it there in a while

--- a/ATM-Console/ATM-Console.csproj
+++ b/ATM-Console/ATM-Console.csproj
@@ -3,13 +3,17 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>ATM_Console</RootNamespace>
+    <RootNamespace>AtmConsole</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="ConsoleTables" Version="2.4.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Domain\Services\" />
   </ItemGroup>
 
 </Project>
